# Predicting-Road-Accidents-ML-portfolio

./: README.md  pyproject.toml  requirements.txt
models/: ridge_model.joblib  xgb_model  xgb_model.joblib
notebook/: EDA_funcs.py  cleaned_EDA.ipynb  cleaned_EDA_html.html  raw_EDA.ipynb
prediction/: ridge_submission.parquet  xgb_submission.parquet
