[project]
name = "06-kaggle-competitions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "nbconvert[webpdf]>=7.16.6",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.1.3",
]
